--- a/design/index.html
+++ b/design/index.html
@@ -74,7 +74,7 @@
                         <p></p>
                     </div>
                     <div>
-                        <img class="landscape" src="../images/Artboard 3.png">
+                        <img class="portrait" src="../images/Artboard 3.png">
 
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                         <p></p>
                     </div>
                     <div>
-                        <img class="landscape" src="../images/Artboard 5.png">
+                        <img class="portrait" src="../images/Artboard 5.png">
 
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                         <p></p>
                     </div>
                     <div>
-                        <img class="landscape" src="../images/Artboard 7.png">
+                        <img class="portrait" src="../images/Artboard 7.png">
 
                     </div>
                 </div>
