--- a/architecture/index.html
+++ b/architecture/index.html
@@ -51,20 +51,20 @@
                         <img class="landscape" src="../images/razstava.jpg">
                     </div>
                 </div>
-                <!--                <div class="container-dela-desni">
+                <div class="container-dela-desni">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Tree Heartbeat</p>
+                        <p style="naslov-dela">Farm house renovation.</p>
                     </div>
                     <div class="opis-dela">
-                        <p>The connection between human and tree manifested in light.</p>
+                        <p>Instilling new life and function to an old farm house.</p>
                     </div>
                     <div>
-                        <img class="landscape" src="images/tree-heartbeat.jpg">
+                        <img class="landscape" src="../images/farmhouse.gif">
                     </div>
                 </div>
             </div>
--->
-                <!--
+     
+            <!--
             <div class="container-del">
                 <div class="container-dela-levi">
                     <div class="naslov-dela">
@@ -92,8 +92,8 @@
             </div>
 -->
 
-            </div>
         </div>
+    </div>
 </body>
 
 </html>
