--- a/architecture/index.html
+++ b/architecture/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="container-dela-desni">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Farm house renovation.</p>
+                        <p style="naslov-dela">Farm house renovation</p>
                     </div>
                     <div class="opis-dela">
                         <p>Instilling new life and function to an old farm house.</p>
