--- a/contact/index.html
+++ b/contact/index.html
@@ -25,11 +25,11 @@
 
 
             <div class="navigation">
-                <a href="../index.html">&nbspLatest&nbsp</a>
-                <a href="/light">&nbspLight&nbsp</a>
-                <a href="/architecture">&nbspArchitecture&nbsp</a>
-                <a href="/design">&nbspDesign&nbsp</a>
-                <a href=""><u>&nbspContact&nbsp</u></a>
+                <a href="../index.html">Latest</a>
+                <a href="/light">Light</a>
+                <a href="/architecture">Architecture</a>
+                <a href="/design">Design</a>
+                <a href=""><u>Contact</u></a>
             </div>
             <div class="container-contact">
                 <p class="contact">studio@janezgroselj.com</p>
