--- a/design/index.html
+++ b/design/index.html
@@ -32,11 +32,11 @@
         <div class="parent">
 
             <div class="navigation">
-                <a href="../index.html">&nbspLatest&nbsp</a>
-                <a href="/light">&nbspLight&nbsp</a>
-                <a href="/architecture">&nbspArchitecture&nbsp</a>
-                <a href=""><u>&nbspDesign&nbsp</u></a>
-                <a href="/contact">&nbspContact&nbsp</a>
+                <a href="../index.html">Latest</a>
+                <a href="/light">Light</a>
+                <a href="/architecture">Architecture</a>
+                <a href=""><u>Design</u></a>
+                <a href="/contact">Contact</a>
             </div>
 
             <div class="container-del-prvi">
