--- a/light/index.html
+++ b/light/index.html
@@ -32,11 +32,11 @@
         <div class="parent">
 
             <div class="navigation">
-                <a href="../index.html">&nbspLatest&nbsp</a>
-                <a href=""><u>&nbspLight&nbsp</u></a>
-                <a href="/architecture">&nbspArchitecture&nbsp</a>
-                <a href="/design">&nbspDesign&nbsp</a>
-                <a href="/contact">&nbspContact&nbsp</a>
+                <a href="../index.html">Latest</a>
+                <a href=""><u>Light</u></a>
+                <a href="/architecture">Architecture</a>
+                <a href="/design">Design</a>
+                <a href="/contact">Contact</a>
             </div>
 
             <div class="container-del-prvi">
