--- a/architecture/index.html
+++ b/architecture/index.html
@@ -32,11 +32,11 @@
         <div class="parent">
 
             <div class="navigation">
-                <a href="../index.html">&nbspLatest&nbsp</a>
-                <a href="/light">&nbspLight&nbsp</a>
-                <a href=""><u>&nbspArchitecture&nbsp</u></a>
-                <a href="/design">&nbspDesign&nbsp</a>
-                <a href="/contact">&nbspContact&nbsp</a>
+                <a href="../index.html">Latest</a>
+                <a href="/light">Light</a>
+                <a href=""><u>Architecture</u></a>
+                <a href="/design">Design</a>
+                <a href="/contact">Contact</a>
             </div>
 
             <div class="container-del-prvi">
