--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <div class="parent">
 
             <div class="navigation">
-                <a href=""><u>&nbspLatest&nbsp</u></a>
-                <a href="/light">&nbspLight&nbsp</a>
-                <a href="/architecture">&nbspArchitecture&nbsp</a>
-                <a href="/design">&nbspDesign&nbsp</a>
-                <a href="/contact">&nbspContact&nbsp</a>
+                <a href=""><u>Latest</u></a>
+                <a href="/light">Light</a>
+                <a href="/architecture">Architecture</a>
+                <a href="/design">Design</a>
+                <a href="/contact">Contact</a>
             </div>
 
             <div class="container-del-prvi">
