--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="container-del-prvi">
                 <div class="container-dela-levi">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Wavescope</p>
+                        <a href="/wavescope">Wavescope</a>
                     </div>
                     <div class="opis-dela">
                         <p>A manifestation of waves in light.</p>
