--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
             </div>
 
             <div class="container-del-prvi">
+                <a href="/wavescope">
                 <div class="container-dela-levi">
                     <div class="naslov-dela">
-                        <a href="/wavescope">Wavescope</a>
+                        <p style="naslov-dela">Wavescope</p>
                     </div>
                     <div class="opis-dela">
                         <p>A manifestation of waves in light.</p>
@@ -50,7 +51,7 @@
                     <div>
                         <img class="portrait" src="/images/valoskop.gif">
                     </div>
-                </div>
+                </div></a>
                 <div class="container-dela-desni">
                     <div class="naslov-dela">
                         <p style="naslov-dela">Piran days of architecture 2019</p>
