--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <div class="layout">
         <div class="headbar">
 
-                <h1>
-                    Janez Grošelj
-                </h1>
+            <h1>
+                Janez Grošelj
+            </h1>
 
         </div>
         <div class="parent">
@@ -40,28 +40,33 @@
             </div>
 
             <div class="container-del-prvi">
-                <a href="/wavescope">
+
                 <div class="container-dela-levi">
-                    <div class="naslov-dela">
-                        <p style="naslov-dela">Wavescope</p>
-                    </div>
-                    <div class="opis-dela">
-                        <p>A manifestation of waves in light.</p>
-                    </div>
-                    <div>
-                        <img class="portrait" src="/images/valoskop.gif">
-                    </div>
-                </div></a>
+                    <a href="/wavescope">
+                        <div class="naslov-dela">
+                            <p style="naslov-dela">Wavescope</p>
+                        </div>
+                        <div class="opis-dela">
+                            <p>A manifestation of waves in light.</p>
+                        </div>
+                        <div>
+                            <img class="portrait" src="/images/valoskop.gif">
+                        </div>
+                    </a>
+                </div>
+
                 <div class="container-dela-desni">
-                    <div class="naslov-dela">
-                        <p style="naslov-dela">Piran days of architecture 2019</p>
-                    </div>
-                    <div class="opis-dela">
-                        <p>Exhibition of masters degree at PIDA.</p>
-                    </div>
-                    <div>
-                        <img class="landscape" src="images/razstava.jpg">
-                    </div>
+                    <a href="/piran">
+                        <div class="naslov-dela">
+                            <p style="naslov-dela">Piran days of architecture 2019</p>
+                        </div>
+                        <div class="opis-dela">
+                            <p>Exhibition of masters degree at PIDA.</p>
+                        </div>
+                        <div>
+                            <img class="landscape" src="images/razstava.jpg">
+                        </div>
+                    </a>
                 </div>
             </div>
 
@@ -89,7 +94,7 @@
                     </div>
                 </div>
             </div>
--->
+            -->
 
         </div>
     </div>
