--- a/index.html
+++ b/index.html
@@ -72,15 +72,17 @@
 
             <div class="container-del">
                 <div class="container-dela-levi">
-                    <div class="naslov-dela">
-                        <p style="naslov-dela">Space invader</p>
-                    </div>
-                    <div class="opis-dela">
-                        <p>A sculpture-enhancing light intervention</p>
-                    </div>
-                    <div>
-                        <img class="portrait" src="/images/vesoljskizarek2.gif">
-                    </div>
+                    <a href="/invader">
+                        <div class="naslov-dela">
+                            <p style="naslov-dela">Space invader</p>
+                        </div>
+                        <div class="opis-dela">
+                            <p>A sculpture-enhancing light intervention</p>
+                        </div>
+                        <div>
+                            <img class="portrait" src="/images/vesoljskizarek2.gif">
+                        </div>
+                    </a>
                 </div>
                 <div class="container-dela-desni">
                     <div class="naslov-dela">
