--- a/wavescope/index.html
+++ b/wavescope/index.html
@@ -24,9 +24,9 @@
     <div class="layout">
         <div class="headbar">
 
-                <h1>
-                    Janez Grošelj
-                </h1>
+            <h1>
+                Janez Grošelj
+            </h1>
 
         </div>
         <div class="parent">
@@ -52,44 +52,16 @@
                     </div>
                 </div>
                 <div class="container-dela-desni">
-                    <div class="naslov-dela">
-                        <p style="naslov-dela">Space invader</p>
-                    </div>
                     <div class="opis-dela">
-                        <p>A sculpture-enhancing light intervention</p>
+                        <p>This light installation tries to visually explore and expose the otherwise invisible reality of waves, be they mechanical or electromagnetic.
+                            In some measure sparked by the current controversy of the 5G broadband network, it endeavors to bring to light this imperceptible phenomenon and make it a bit more tangible and perhaps evoke a novel experience and a sense of perception in the viewer.
+                            
+                            Production: Svetlobna Gverila
+                            Video: Borut Bučinel</p>
                     </div>
-                    <div>
-                        <img class="portrait" src="../images/vesoljskizarek2.gif">
-                    </div>
+
                 </div>
             </div>
-
-            <div class="container-del">
-                <div class="container-dela-levi">
-                    <div class="naslov-dela">
-                        <p style="naslov-dela">Tree Heartbeat</p>
-                    </div>
-                    <div class="opis-dela">
-                        <p>The connection between human and tree manifested in light.</p>
-                    </div>
-                    <div>
-                        <img class="landscape" src="../images/tree-heartbeat.jpg">
-                    </div>
-                </div>
-<!--                <div class="container-dela-desni">
-                    <div class="naslov-dela">
-                        <p style="naslov-dela">Tree Heartbeat</p>
-                    </div>
-                    <div class="opis-dela">
-                        <p>The connection between human and tree manifested in light.</p>
-                    </div>
-                    <div>
-                        <img class="landscape" src="images/tree-heartbeat.jpg">
-                    </div>
-                </div>
-            </div>
--->
-
         </div>
     </div>
 </body>
