--- a/design/index.html
+++ b/design/index.html
@@ -32,11 +32,11 @@
         <div class="parent">
 
             <div class="navigation">
-                <a href="../index.html">Latest</a>
-                <a href="/light">Light</a>
-                <a href="/architecture">Architecture</a>
-                <a href=""><u>Design</u></a>
-                <a href="/contact">Contact</a>
+                <a href="../index.html">Novo</a>
+                <a href="/light">Svetloba</a>
+                <a href="/architecture">Arhitektura</a>
+                <a href=""><u>Oblikovanje</u></a>
+                <a href="/contact">Kontakt</a>
             </div>
 
             <div class="container-del-prvi">
