--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <div class="parent">
 
             <div class="navigation">
-                <a href=""><u>Latest</u></a>
-                <a href="/light">Light</a>
-                <a href="/architecture">Architecture</a>
-                <a href="/design">Design</a>
-                <a href="/contact">Contact</a>
+                <a href=""><u>Novo</u></a>
+                <a href="/light">Svetloba</a>
+                <a href="/architecture">Arhitektura</a>
+                <a href="/design">Oblikovanje</a>
+                <a href="/contact">Kontakt</a>
             </div>
 
             <div class="container-del-prvi">
@@ -44,10 +44,10 @@
                 <div class="container-dela-levi">
 
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Wavescope</p>
+                        <p style="naslov-dela">Valoskop</p>
                     </div>
                     <div class="opis-dela">
-                        <p>A manifestation of waves in light.</p>
+                        <p>Svetlobna abstrakcija fenomena valovanja.</p>
                     </div>
                     <div>
                         <img class="portrait" src="/images/valoskop.gif">
@@ -58,10 +58,10 @@
                 <div class="container-dela-desni">
 
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Piran days of architecture 2019</p>
+                        <p style="naslov-dela">Piranski dnevi arhitekture 2019</p>
                     </div>
                     <div class="opis-dela">
-                        <p>Exhibition of masters degree at PIDA.</p>
+                        <p>Razstava magistrskega dela.</p>
                     </div>
                     <div>
                         <img class="landscape" src="images/razstava.jpg">
@@ -77,7 +77,7 @@
                         <p style="naslov-dela">Space invader</p>
                     </div>
                     <div class="opis-dela">
-                        <p>A sculpture-enhancing light intervention</p>
+                        <p>Svetlobna intervencija na obstoječem vodnjaku.</p>
                     </div>
                     <div>
                         <img class="portrait" src="/images/vesoljskizarek2.gif">
@@ -86,10 +86,10 @@
                 </div>
                 <div class="container-dela-desni">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Tree Heartbeat</p>
+                        <p style="naslov-dela">Utrip drevesa</p>
                     </div>
                     <div class="opis-dela">
-                        <p>The connection between human and tree manifested in light.</p>
+                        <p>Svetlobna manifestacija povezave med človekom in drevesom.</p>
                     </div>
                     <div>
                         <img class="landscape" src="images/tree-heartbeat.jpg">
