--- a/light/index.html
+++ b/light/index.html
@@ -32,20 +32,20 @@
         <div class="parent">
 
             <div class="navigation">
-                <a href="../index.html">Latest</a>
-                <a href=""><u>Light</u></a>
-                <a href="/architecture">Architecture</a>
-                <a href="/design">Design</a>
-                <a href="/contact">Contact</a>
+                <a href="../index.html">Novo</a>
+                <a href=""><u>Svetloba</u></a>
+                <a href="/architecture">Arhitektura</a>
+                <a href="/design">Oblikovanje</a>
+                <a href="/contact">Kontakt</a>
             </div>
 
             <div class="container-del-prvi">
                 <div class="container-dela-levi">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Wavescope</p>
+                        <p style="naslov-dela">Valoskop</p>
                     </div>
                     <div class="opis-dela">
-                        <p>A manifestation of waves in light.</p>
+                        <p>Svetlobna abstrakcija fenomena valovanja.</p>
                     </div>
                     <div>
                         <img class="landscape" src="../images/valoskop.gif">
@@ -56,7 +56,7 @@
                         <p style="naslov-dela">Space invader</p>
                     </div>
                     <div class="opis-dela">
-                        <p>A sculpture-enhancing light intervention</p>
+                        <p>Svetlobna intervencija na obstoječem vodnjaku.</p>
                     </div>
                     <div>
                         <img class="portrait" src="../images/vesoljskizarek2.gif">
@@ -67,10 +67,10 @@
             <div class="container-del">
                 <div class="container-dela-levi">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Tree Heartbeat</p>
+                        <p style="naslov-dela">Utrip drevesa</p>
                     </div>
                     <div class="opis-dela">
-                        <p>The connection between human and tree manifested in light.</p>
+                        <p>Svetlobna manifestacija povezave med človekom in drevesom.</p>
                     </div>
                     <div>
                         <img class="landscape" src="../images/tree-heartbeat.jpg">
