--- a/architecture/index.html
+++ b/architecture/index.html
@@ -32,20 +32,20 @@
         <div class="parent">
 
             <div class="navigation">
-                <a href="../index.html">Latest</a>
-                <a href="/light">Light</a>
-                <a href=""><u>Architecture</u></a>
-                <a href="/design">Design</a>
-                <a href="/contact">Contact</a>
+                <a href="../index.html">Novo</a>
+                <a href="/light">Svetloba</a>
+                <a href=""><u>Arhitektura</u></a>
+                <a href="/design">Oblikovanje</a>
+                <a href="/contact">Kontakt</a>
             </div>
 
             <div class="container-del-prvi">
                 <div class="container-dela-levi">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Piran days of architecture 2019</p>
+                        <p style="naslov-dela">Piranski dnevi arhitekture 2019</p>
                     </div>
                     <div class="opis-dela">
-                        <p>Exhibition of masters degree at PIDA.</p>
+                        <p>Razstava magistrskega dela.</p>
                     </div>
                     <div>
                         <img class="landscape" src="../images/razstava.jpg">
@@ -53,10 +53,10 @@
                 </div>
                 <div class="container-dela-desni">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Farm house renovation</p>
+                        <p style="naslov-dela">Prenova gospodarskega objekta.</p>
                     </div>
                     <div class="opis-dela">
-                        <p>Instilling new life and function to an old farm house.</p>
+                        <p>Vcepljanje novega življenja v stari kmečko poslopje.</p>
                     </div>
                     <div>
                         <img class="landscape" src="../images/farmhouse.gif">
