--- a/arborist/index.html
+++ b/arborist/index.html
@@ -25,7 +25,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/1.jpg" alt="" />
 						</div>
 					</section>
 
@@ -61,12 +61,7 @@
 							- vzdrževanje <br>
 							- montaža <br>
 							- reševanje malih živali <br>
-							
-
-						</p>
-							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
+							</p>
 						</div>
 						<div class="image">
 							<img src="images/2.jpg" alt="" />
