--- a/arborist/index.html
+++ b/arborist/index.html
@@ -21,7 +21,7 @@
 							<p>This is a <strong>Banner</strong> element, and it's generally used as an introduction or opening statement. You can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-banner">details</a>).</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button large wide smooth-scroll-middle">040 943 440</a></li>
-								<li><a href="#first" class="button large wide smooth-scroll-middle">drevo@janezgroselj.com</a></li>
+								<li><a href="mailto:arborist@janezgroselj.com" class="button large wide smooth-scroll-middle">drevo@janezgroselj.com</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -70,7 +70,7 @@
 
 
 
-				<!-- Footer -->
+				<!-- Footer 
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
@@ -80,11 +80,13 @@
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy;<a href="https://janezgroselj.com">janezgroselj.com</a></p>
 						</div>
 					</footer>
 
 			</div>
+
+			-->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
