--- a/arborist/index.html
+++ b/arborist/index.html
@@ -70,9 +70,10 @@
 
 
 
-				<!-- Footer 
+				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
+							<!--
 							<ul class="icons">
 								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -80,13 +81,14 @@
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
+							-->
 							<p>&copy;<a href="https://janezgroselj.com">janezgroselj.com</a></p>
 						</div>
 					</footer>
 
 			</div>
 
-			-->
+			
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
