--- a/arborist/index.html
+++ b/arborist/index.html
@@ -18,7 +18,7 @@
 						<div class="content">
 							<h1>Arboristika.</h1>
 							<p class="major">Negujemo, obrezujemo, podiramo in objemamo drevesa.</p>
-							<p>This is a <strong>Banner</strong> element, and it's generally used as an introduction or opening statement. You can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-banner">details</a>).</p>
+							<p></p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button large wide smooth-scroll-middle">040 943 440</a></li>
 								<li><a href="mailto:arborist@janezgroselj.com" class="button large wide smooth-scroll-middle">drevo@janezgroselj.com</a></li>
@@ -35,10 +35,10 @@
 						<h2>Strošek</h2>
 						<p>Odvisno od zahtevnosti. Postopno podiranje okvirno: <br>
 							<br> 
-							<strong>do 5m: </strong> do 100 eur <br>
-							<strong>5-10m: </strong> 100-200 eur <br>
-							<strong>10-15m: </strong> 150-300 eur <br>
-							<strong>15-20m: </strong> 250-400 eur <br>
+							<strong>5m: </strong> do 100 eur <br>
+							<strong>10m: </strong> 100-200 eur <br>
+							<strong>15m: </strong> 150-250 eur <br>
+							<strong>20m: </strong> 200-400 eur <br>
 							<strong>25+m: </strong> 300+ eur <br>
 							<br> Odvoz po dogovoru.
 						
