--- a/arborist/index.html
+++ b/arborist/index.html
@@ -18,7 +18,7 @@
 						<div class="content">
 							<h1>Arboristika.</h1>
 							<p class="major">Negujemo, obrezujemo, podiramo in objemamo drevesa.</p>
-							<p></p>
+							<p>Specializiramo za obžagovanje in podiranje dreves s plezalno in vrvno tehniko, kjer ni mogoče navadno podiranje in kjer je dostop z dvigalom onemogočen ali cenovno nedostopen.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button large wide smooth-scroll-middle">040 943 440</a></li>
 								<li><a href="mailto:arborist@janezgroselj.com" class="button large wide smooth-scroll-middle">drevo@janezgroselj.com</a></li>
@@ -57,10 +57,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Višinska dela</h2>
-							<p>Opravimo tudi druga zahtevnejša višinska dela: <br>
-							- vzdrževanje <br>
-							- montaža <br>
-							- reševanje malih živali <br>
+							<p>Opravimo tudi druga specializirana dela na višini, kot so elektroinstalacije, varjenje, reševanje živali.
 							</p>
 						</div>
 						<div class="image">
