--- a/arborist/index.html
+++ b/arborist/index.html
@@ -16,12 +16,12 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Arboristika.</h1>
-							<p class="major">Negujemo, obrezujemo, podiramo in objemamo drevesa.</p>
-							<p>Specializiramo za obžagovanje in podiranje dreves s plezalno in vrvno tehniko, kjer ni mogoče navadno podiranje in kjer je dostop z dvigalom onemogočen ali cenovno nedostopen.</p>
+							<h1>Arboristične storitve.</h1>
+							<p class="major">Obžagovanje, krajšanje, podiranje in objemanje dreves.</p>
+							<p>Specializiramo v plezalnih in vrvnih tehnikah, ko običajno podiranje ni mogoče, ter kjer je dostop z dvigalom onemogočen ali cenovno nedostopen.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button large wide smooth-scroll-middle">040 943 440</a></li>
-								<li><a href="mailto:arborist@janezgroselj.com" class="button large wide smooth-scroll-middle">drevo@janezgroselj.com</a></li>
+								<li><a href="mailto:arborist@janezgroselj.com" class="button large wide smooth-scroll-middle">arborist@janezgroselj.com</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -33,7 +33,7 @@
 				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 					<div class="content">
 						<h2>Strošek</h2>
-						<p>Odvisno od zahtevnosti. Postopno podiranje okvirno: <br>
+						<p>Odvisno od zahtevnosti. Okvirna cena za postopno podiranje: <br>
 							<br> 
 							<strong>5m: </strong> do 100 eur <br>
 							<strong>10m: </strong> 100-200 eur <br>
