--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<article class="thumb">
 				<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
 				<h2>CITY: A SKETCH // Light installation</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				<p>The authors (Andrej Štular & Janez Grošelj) devised an integrated spatial ambient, full of details such as the set of mobile elements and varied mechanical devices to create an illusion for the viewer with the help of light, shadows and sound of (being in) the dynamic cacophony that is a modern city.</p>
 			</article>
 			<article class="thumb">
 				<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
