--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<article class="thumb">
 				<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
 				<h2>The dammed // light installation</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				<p>An artistic commentary of current reality where breath has become a kind of a biological weapon that can instantly kill off all public life, this conceptual installation consists of a sensor that responds to blowing: the spectator can extinguish street lights with a blow of their breath.</p>
 			</article>
 			<article class="thumb">
 				<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
@@ -64,9 +64,9 @@
 			<article class="thumb">
 				<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
 				<h2>Tree heartbeat // light installation</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+				<p>The Tree Heartbeat project thematises man's connection with nature, the tree and man are thus considered as parts of a unified and connected system where many relations and interdependencies take place.  The concept of this interactive project relies on the light elements on the tree, whose canopy is crisscrossed with many LED tapes which are programmed to create transitions in light intensity in the canopy to resemble the flow of a heartbeat. The entering point of the system is a sensor, attached to the trunk on which visitors can lay their hands, which will make the lighted canopy pulsate in a faster rhythm.</p>
 			</article>
-			<article class="thumb">
+<!--			<article class="thumb">
 				<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
 				<h2>Mauris id tellus arcu</h2>
 				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
@@ -96,7 +96,7 @@
 				<h2>Vehicula id nulla dignissim</h2>
 				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 			</article>
-		</div>
+-->		</div>
 
 		<!-- Footer -->
 		<footer id="footer" class="panel">
