--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					<section>
 <!--						<h2>Follow me on ...</h2>
 -->						<ul class="icons">
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+							<li><a href="instagram.com/janez.groselj" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
 							</li>
 							<!--
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
