--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<article class="thumb">
 				<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
 				<h2>The dammed // light installation</h2>
-				<p>An artistic commentary of current reality where breath has become a kind of a biological weapon that can instantly kill off all public life, this conceptual installation consists of a sensor that responds to blowing: the spectator can extinguish street lights with a blow of their breath.</p>
+				<p>An artistic commentary of current reality where breath has become a kind of a biological weapon that can instantly stop all public life, this conceptual installation consists of a sensor that responds to blowing: the spectator can extinguish street lights with a blow of their breath.</p>
 			</article>
 			<article class="thumb">
 				<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
