--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<article class="thumb">
 				<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
 				<h2>Tree heartbeat // light installation</h2>
-				<p>The Tree Heartbeat project thematises man's connection with nature, the tree and man are thus considered as parts of a unified and connected system where many relations and interdependencies take place.  The concept of this interactive project relies on the light elements on the tree, whose canopy is crisscrossed with many LED tapes which are programmed to create transitions in light intensity in the canopy to resemble the flow of a heartbeat. The entering point of the system is a sensor, attached to the trunk on which visitors can lay their hands, which will make the lighted canopy pulsate in a faster rhythm.</p>
+				<p>The Tree Heartbeat project thematises man's connection with nature, the tree and man are thus considered as parts of a unified and connected system where many relations and interdependencies take place.  The concept of this interactive project relies on the light elements on the tree, whose canopy is crisscrossed with many LED tapes which are programmed to create transitions in light intensity in the canopy to resemble the flow of a heartbeat. The entering point of the system is a sensor, attached to the trunk on which visitors can lay their hands, which will make the lighted canopy pulsate in a faster rhythm. Co-authored with Sabina Černič.</p>
 			</article>
 <!--			<article class="thumb">
 				<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
