--- a/index.html
+++ b/index.html
@@ -1,155 +1,170 @@
-<!DOCTYPE HTML>
-<!--
-	Multiverse by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>STUDIO JANEZ GROŠELJ</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
-	</noscript>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Luminarium</title>
+  
+  <!-- Custom Black and White Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png" />
+
+  <!-- Google Font -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Figtree:wght@300;400;500;700&display=swap"
+    rel="stylesheet"
+  />
+  <style>
+    /* Reset/defaults */
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      font-family: 'Figtree', sans-serif;
+      background: #000;
+      /* We don't want scrollbars if something overflows */
+      overflow: hidden;
+      color: white;
+    }
+
+    /* This container always matches the viewport size and hides overflow */
+    .video-wrap {
+      position: relative;
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden; /* Crops whichever dimension is bigger */
+    }
+
+    /* The 16:9 container that we'll dynamically size via media queries */
+    .video-ratio {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: #000; /* fallback color */
+    }
+
+    .video-ratio iframe {
+      display: block;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+
+    /*
+      1) If the viewport aspect ratio is WIDER than 16:9:
+         - We fill the width (100vw).
+         - The height is derived from (9/16 * width).
+         - This may crop *vertically* if the screen is extra wide.
+
+      2) If the viewport aspect ratio is NARROWER than 16:9:
+         - We fill the height (100vh).
+         - The width is derived from (16/9 * height).
+         - This may crop *horizontally* if the screen is tall/narrow.
+    */
+
+    /* Fixed header/nav styles */
+    header {
+      position: fixed;
+      top: 30px;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 180px;
+      box-sizing: border-box;
+      z-index: 10; /* Stay above the video */
+    }
+
+    .menu {
+      display: flex;
+      gap: 30px;
+    }
+
+    .menu a {
+      color: white;
+      text-decoration: none;
+      font-size: 1.2rem;
+      transition: color 0.3s ease;
+    }
+
+    .menu a:hover {
+      color: #00adee;
+    }
+
+    /* The brand is now a link back to luminarium.cc */
+    .brand a {
+      color: white;
+      text-decoration: none;
+      font-size: 1.4rem;
+      font-weight: semibold;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      text-align: right;
+      transition: color 0.3s ease;
+    }
+    .brand a:hover {
+      color: #00adee;
+    }
+
+    /* Optional text styling if needed */
+    .tagline {
+      font-size: clamp(1.5rem, 5vw, 3rem);
+      line-height: 1.5;
+      color: white;
+      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
+    }
+
+    @media (min-aspect-ratio: 16/9) {
+      /* Viewport is >= 16:9, so fill width, compute height by ratio */
+      .video-ratio {
+        width: 100vw;
+        height: calc(100vw * 9 / 16);
+      }
+    }
+
+    @media (max-aspect-ratio: 16/9) {
+      /* Viewport is < 16:9, so fill height, compute width by ratio */
+      .video-ratio {
+        height: 100vh;
+        width: calc(100vh * 16 / 9);
+      }
+    }
+
+    @media (max-width: 768px) {
+      /* Mobile-specific styles */
+      header {
+        padding: 10px 40px;
+      }
+    }
+  </style>
 </head>
+<body>
 
-<body class="is-preload">
+  <div class="video-wrap">
+    <div class="video-ratio">
+      <!-- Place your embed code here -->
+      <iframe
+        src="https://iframe.mediadelivery.net/embed/396477/ce12c1e6-df50-4d90-9776-d12769a853f6?autoplay=true&loop=true&muted=true&preload=true&responsive=false&playsinline=true"
+        loading="lazy"
+        allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+        allowfullscreen="true">
+      </iframe>
+    </div>
+  </div>
 
-	<!-- Wrapper -->
-	<div id="wrapper">
-
-		<!-- Header -->
-		<header id="header">
-			<h1><a href="index.html"><strong>Studio Janez Grošelj</strong> </a></h1>
-			<nav>
-				<ul>
-					<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
-				</ul>
-			</nav>
-		</header>
-
-		<!-- Main -->
-		<div id="main">
-			<article class="thumb">
-				<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
-				<h2>TEMPOMAT // PRODUCT DESIGN</h2>
-				<p>A materialization of time, a symbol for the preciousness of the moment and a reminder of its
-					transience.
-					<br><a href="http://www.tempomat.watch">www.tempomat.watch</a>
-				</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
-				<h2>CITY: A SKETCH // Light installation</h2>
-				<p>The authors (Andrej Štular & Janez Grošelj) devised an integrated spatial ambient, full of details such as the set of mobile elements and varied mechanical devices to create an illusion for the viewer with the help of light, shadows and sound of (being in) the dynamic cacophony that is a modern city.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
-				<h2>The dammed // light installation</h2>
-				<p>An artistic commentary of current reality where breath has become a kind of a biological weapon that can instantly stop all public life, this conceptual installation consists of a sensor that responds to blowing: the spectator can extinguish street lights with a blow of their breath.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
-				<h2>Space invader // light installation</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
-				<h2>Wavescope // light installation</h2>
-				<p>An abstracted visualization of lightwaves as a phenomenon that can transfer energy, light, sound and information through space.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
-				<h2>Tree heartbeat // light installation</h2>
-				<p>The Tree Heartbeat project thematises man's connection with nature, the tree and man are thus considered as parts of a unified and connected system where many relations and interdependencies take place.  The concept of this interactive project relies on the light elements on the tree, whose canopy is crisscrossed with many LED tapes which are programmed to create transitions in light intensity in the canopy to resemble the flow of a heartbeat. The entering point of the system is a sensor, attached to the trunk on which visitors can lay their hands, which will make the lighted canopy pulsate in a faster rhythm. Co-authored with Sabina Černič.</p>
-			</article>
-<!--			<article class="thumb">
-				<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
-				<h2>Mauris id tellus arcu</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
-				<h2>Nunc vehicula id nulla</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
-				<h2>Neque et faucibus viverra</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
-				<h2>Mattis ante fermentum</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
-				<h2>Sed ac elementum arcu</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
-				<h2>Vehicula id nulla dignissim</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
--->		</div>
-
-		<!-- Footer -->
-		<footer id="footer" class="panel">
-			<div class="inner split">
-				<div>
-					<section>
-						<h2>Light, design and architecture.</h2>
-						<p> </p>
-					</section>
-					<section>
-<!--						<h2>Follow me on ...</h2>
--->						<ul class="icons">
-							<li><a href="instagram.com/janez.groselj" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
-							</li>
-							<!--
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
-							</li>
-
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
-			-->
-							</li>
-						</ul>
-					</section>
-					<p class="copyright">
-						&copy; <a href="https://janezgroselj.com">janezgroselj.com</a>. All rights reserved.
-					</p>
-				</div>
-				<div>
-					<section>
-						<h2>Get in touch</h2>
-						<span><strong>studio@janezgroselj.com</strong></span>
-						<br><br>
-						<span><strong>00386 40 943 440</strong></span>
-						<br><br>
-						<span><strong>Na Lazih 82, 1351 Brezovica, Slovenija</strong></span>
-					</section>
-				</div>
-			</div>
-		</footer>
-
-	</div>
-
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.poptrox.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+  <!-- Fixed header with brand name and navigation -->
+  <header>
+    <nav class="menu">
+      <a href="https://luminarium.cc/artworks">Artworks</a>
+      <a href="https://luminarium.cc/about">About</a>
+    </nav>
+    <!-- LUMINARIUM as a link back to luminarium.cc -->
+    <div class="brand">
+      <a href="https://luminarium.cc">L U M I N A R I U M</a>
+    </div>
+  </header>
 
 </body>
-
 </html>
