--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luminarium About</title>
+    <title>Janez Groselj About</title>
   <link rel="icon" type="image/png" href="favicon.png" />	  <!-- Custom Black and White Favicon -->
   
     <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap" rel="stylesheet">
@@ -156,11 +156,11 @@
 <body>
   <header>
     <nav class="menu">
-      <a href="https://luminarium.cc/artworks">Artworks</a>
-      <a href="https://luminarium.cc/about">About</a>
+      <a href="https://janezgroselj.com/artworks">Artworks</a>
+      <a href="https://janezgroselj.com/about">About</a>
     </nav>
     <div class="brand">
-      <a href="https://luminarium.cc">L U M I N A R I U M</a>
+      <a href="https://janezgroselj.com">Janez Groselj</a>
     </div>
   </header>
 
@@ -183,7 +183,7 @@
   </div>
 
   <footer style="text-align: center; margin: 20px 0; color: #aaa; font-size: 0.9rem;">
-    © 2025 Luminarium. All rights reserved.
+    © 2025 Janez Groselj. All rights reserved.
   </footer>
 </body>
 </html>
