--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Luminarium</title>
+  <title>Janez Groselj</title>
   
   <!-- Custom Black and White Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
@@ -157,12 +157,12 @@
   <!-- Fixed header with brand name and navigation -->
   <header>
     <nav class="menu">
-      <a href="https://luminarium.cc/artworks">Artworks</a>
-      <a href="https://luminarium.cc/about">About</a>
+      <a href="https://janezgroselj.com/artworks">Artworks</a>
+      <a href="https://janezgroselj.com/about">About</a>
     </nav>
     <!-- LUMINARIUM as a link back to luminarium.cc -->
     <div class="brand">
-      <a href="https://luminarium.cc">L U M I N A R I U M</a>
+      <a href="https://janezgroselj.com">Janez Groselj</a>
     </div>
   </header>
 
