--- a/about/index.html
+++ b/about/index.html
@@ -160,7 +160,7 @@
       <a href="https://janezgroselj.com/about">About</a>
     </nav>
     <div class="brand">
-      <a href="https://janezgroselj.com">Janez Groselj</a>
+      <a href="https://janezgroselj.com">JANEZ GROSELJ</a>
     </div>
   </header>
 
