--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </nav>
     <!-- LUMINARIUM as a link back to luminarium.cc -->
     <div class="brand">
-      <a href="https://janezgroselj.com">Janez Groselj</a>
+      <a href="https://janezgroselj.com">JANEZ GROSELJ</a>
     </div>
   </header>
 
