--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       width: 100%;
       height: 100%;
       border: none;
-	/*  pointer-events: none;  Make video unclickable */
+	  pointer-events: none; /* Make video unclickable */
     }
 
     /*
