--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </nav>
     <!-- LUMINARIUM as a link back to luminarium.cc -->
     <div class="brand">
-      <a href="https://janezgroselj.com">JANEZ GROSELJ</a>
+      <a href="https://janezgroselj.com">J A N E Z  G R O S E L J</a>
     </div>
   </header>
 
