--- a/artworks/index.html
+++ b/artworks/index.html
@@ -181,7 +181,7 @@
             <a href="https://janezgroselj.com/about">About</a>
         </nav>
         <div class="brand">
-            <a href="https://janezgroselj.com">JANEZ GROSELJ</a>
+            <a href="https://janezgroselj.com">J A N E Z &nbsp G R O S E L J</a>
         </div>
     </header>
 
