--- a/about/index.html
+++ b/about/index.html
@@ -160,7 +160,7 @@
       <a href="https://janezgroselj.com/about">About</a>
     </nav>
     <div class="brand">
-      <a href="https://janezgroselj.com">JANEZ GROSELJ</a>
+      <a href="https://janezgroselj.com">J A N E Z &nbsp G R O S E L J</a>
     </div>
   </header>
 
@@ -172,14 +172,14 @@
         <img src="1.jpg" alt="Luminarium Installation">
     </div>
 <br>
-    <p>Inspired by the subtle wonders of nature and the cosmos, Luminarium transforms often-overlooked elements into mesmerizing experiences through light, aiming to enhance perception and emotional connection to environments.</p>
+    <p>Inspired by the subtle wonders of nature and the cosmos, my artworks try to transform often-overlooked elements into mesmerizing experiences through light, aiming to enhance perception and emotional connection to environments.</p>
 
-    <p>Working with a team of experienced technicians and collaborating with diverse artists, Luminarium delivers astonishing experiences that have been showcased at numerous international festivals, including Lighting Guerrilla in Ljubljana, iLight in Singapore, BLINK Cincinnati in the USA, Noor Riyadh in Saudi Arabia, VIVID Sydney in Australia, among others.</p> 
+    <p>Working with a team of experienced technicians and collaborating with diverse artists, we deliver astonishing experiences that have been showcased at numerous international festivals, including Lighting Guerrilla in Ljubljana, iLight in Singapore, BLINK Cincinnati in the USA, Noor Riyadh in Saudi Arabia, VIVID Sydney in Australia, among others.</p> 
 
-<p>Beyond creating installations, Luminarium offers comprehensive solutions for organizing light festivals, providing a turn-key service for cities and clients seeking to illuminate spaces with impactful light art experiences.</p>
+<p>Beyond creating installations, we offer comprehensive solutions for organizing light festivals, providing a turn-key service for cities and clients seeking to illuminate spaces with impactful light art experiences.</p>
 <br>
-    <h2>Contact Us</h2>
-    <p>For inquiries, collaborations, or just to share your thoughts, please reach out to us at <a href="mailto:info@luminarium.cc" style="color:#00adee; text-decoration:underline;">info@luminarium.cc</a>.</p>
+    <h2>Contact</h2>
+    <p>For inquiries, collaborations, or just to share your thoughts, please reach out at <a href="mailto:studio@janezgroselj.com" style="color:#00adee; text-decoration:underline;">studio@janezgroselj.com</a>.</p>
   </div>
 
   <footer style="text-align: center; margin: 20px 0; color: #aaa; font-size: 0.9rem;">
