--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <header class="header">
         <h1>Janez Grošelj</h1>
-        <p class="intro">Artist & Architect. Founder of Luminarium and Tempomat.</p>
+        <p class="intro">Artist & Architect.</p>
     </header>
 
     <main class="projects-container">
@@ -160,7 +160,7 @@
                 <img src="images/luminarium-preview.png" alt="Preview of the Luminarium website">
             </div>
             <div class="project-title">
-                <span>Luminarium</span>
+                <span>L U M I N A R I U M</span>
                 Artworks in Light & Space <span class="arrow">→</span>
             </div>
         </a>
