--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <img src="images/tempomat-preview.png" alt="Preview of the Tempomat website">
             </div>
             <div class="project-title">
-                <span>Tempomat</span>
+                <span>TEMPOMAT</span>
                 A Horological Experiment <span class="arrow">→</span>
             </div>
         </a>
