--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </main>
 
     <footer>
-        <a href="mailto:janez@luminarium.cc">Contact</a>
+        <a href="mailto:studio@janezgroselj.com">studio@janezgroselj.com</a>
         <span>&bull;</span>
         <a href="https://luminarium.cc/about" target="_blank">About</a>
     </footer>
