--- a/about/index.html
+++ b/about/index.html
@@ -149,7 +149,7 @@
     </main>
 
     <footer>
-        <a href="mailto:janez@luminarium.cc">Contact</a>
+        <a href="mailto:studio@janezgroselj.com">studio@janezgroselj.com</a>
     </footer>
 
 </body>
