--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <footer>
         <a href="mailto:studio@janezgroselj.com">studio@janezgroselj.com</a>
         <span>&bull;</span>
-        <a href="https://janezgroselj.com/about" target="_blank">About</a>
+        <a href="https://janezgroselj.com/about">About</a>
     </footer>
 
 </body>
