--- a/about/index.html
+++ b/about/index.html
@@ -132,7 +132,7 @@
         <h1>About</h1>
 
         <p>
-            Janez Grošelj is an artist and architect with a passion for aesthetics, whether found in architecture, products, or artworks. At the core of his work is a deep appreciation for nature and the timeless dialogue between humanity and the environment. He seeks to bring these ideas closer to the public, creating experiences that are both thought-provoking and emotionally resonant.
+            Janez Grošelj is an artist and architect with a passion for aesthetics, whether found in art, architecture, objects or in nature. At the core of his work is a deep appreciation for nature and the timeless dialogue between humanity and the environment. He seeks to bring these ideas closer to the public, creating experiences that are both thought-provoking and emotionally resonant.
         </p>
         <p>
             His creative process is a balance between embracing fresh, avant-garde technology while holding a deep respect for history, heritage, and traditional knowledge. This philosophy is the foundation of his light art studio, <a href="https://luminarium.cc" target="_blank">Luminarium</a>, through which he creates large-scale installations for international festivals.
