--- a/about/index.html
+++ b/about/index.html
@@ -76,7 +76,7 @@
         }
 
         .content-container h1 {
-            font-size: clamp(1.8rem, 5vw, 2.8rem);
+            font-size: clamp(1.2rem, 3vw, 1.6rem);
             font-weight: 600;
             color: var(--primary-color);
             margin-bottom: 2rem; 
@@ -125,7 +125,7 @@
 
     <main class="content-container">
         
-     /*   <h1>About</h1> */
+        <h1>About</h1> 
 
         <div class="profile-image-container">
             <!-- The image should be placed in an 'images' folder in the root directory -->
